--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "http.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon http.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
